--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//at.alicdn.com/t/font_1198925_iyotrfxyxkr.js"></script>
     <link rel="stylesheet" href="./style.css">
     <meta charset="utf-8">
     <title>JS Bin</title>
 </head>
 <body>
+<canvas id="canvas"></canvas>
 <div id="actions" class=actions>
-    <canvas id="canvas" width= 300 height=300></canvas>
-    <button id="eraser">橡皮擦</button>
-    <button id="brush">画笔</button>
+    <svg id="pen" class="icon">
+        <use xlink:href="#icon-pen"></use>
+    </svg>
+    <svg id="eraser" class="icon">
+        <use xlink:href="#icon-eraser"></use>
+    </svg>
+    <svg id="clear" class="icon">
+        <use xlink:href="#icon-clear"></use>
+    </svg>
+    <svg id="save" class="icon">
+        <use xlink:href="#icon-save"></use>
+    </svg>
 </div>
+<ol class="colors">
+    <li id="red" class="red"></li>
+    <li id="green" class="green"></li>
+    <li id="blue" class="blue"></li>
+</ol>
+<ol class="sizes">
+    <li id="thin" class="thin"></li>
+    <li id="thick" class="thick"></li>
+</ol>
+
 <script src="./main.js"></script>
 </body>
 </html>
