--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <canvas id="canvas"></canvas>
 <div id="actions" class=actions>
-    <svg id="pen active" class="icon">
+    <svg id="pen" class="icon  active">
         <use xlink:href="#icon-pen"></use>
     </svg>
     <svg id="eraser" class="icon">
